--- a/public/stylesheets/sass/_layout.scss
+++ b/public/stylesheets/sass/_layout.scss
@@ -1,7 +1,10 @@
 *{ margin: 0; padding: 0; box-sizing: border-box; }
 
 body{
-	background-color: #eee;
+	@media(min-width: $mobileLarge){
+		background-color: #eee;
+	}
+	background-color: #fff;
 }
 
 .clearfix{ clear: both; }
@@ -33,6 +36,9 @@ body{
 	padding: 50px;
 	@media(max-width: $tabletPortrait){
 		padding: 20px;
+	}
+	@media(max-width: $mobileLarge){
+		padding: 0 20px;
 	}
 	&.unit25{
 		flex: 0 0 25%;
@@ -67,7 +73,7 @@ body{
 		}
 	}
 	@media(max-width: $mobileLarge){
-		&.unit50,&.unit25{
+		&.unit50,&.unit25,&.unit33{
 			flex: 0 0 100%;
 			max-width: 100%;
 		}
@@ -79,7 +85,6 @@ body{
 .right{
   float: none;
   width: auto;
-  min-height: 100vh;
 	margin: -5px 0 0 0;
   background-color: #f5f5f5;
   overflow: hidden;
@@ -100,11 +105,11 @@ body{
   }
 }
 
-ul.portfolio{
+.portfolio{
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
-	li{
+	.unit{
 		a{
 			display: flex;
 			flex-direction: column;
